--- a/src/components/login.css
+++ b/src/components/login.css
@@ -7,6 +7,7 @@
       grid-template-rows:35px 1fr;
       row-gap: 30px;
       padding: 10px;
+      height: 100dvh;
     }
   .navbar-list {
     list-style: none; /* Remove default list styling */
@@ -17,6 +18,11 @@
     color: #ccc;
     grid-template-columns: 1fr 1fr 1fr  1fr  1fr  1fr 1fr;
     
+  }
+
+  .navbar-list a{
+    color: white;
+    text-decoration: none;
   }
   .all{
       
@@ -153,10 +159,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-family: Inter;
   font-size: 64px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 450;
   line-height: normal;
   margin-top: 20px;
   gap:40px
@@ -165,6 +170,7 @@
     color: #fff;
     font-size: 34px;
   font-weight:bolder;
+  font-family: inter;
   }
   .addtask{
     width: 48px;
@@ -190,6 +196,7 @@
   border: 1px solid #000;
   background: #4E2AB0;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  
   }
   
   .time-column{
@@ -198,6 +205,8 @@
   border-radius: 50px;
   background: linear-gradient(180deg, rgba(217, 217, 217, 0.77) 0%, rgba(115, 115, 115, 0.77) 100%);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  height: fit-content;
   
   }
   .time-table {
