--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,13 +1,18 @@
+body{
+    background-color: #000;
+    padding: 0%;
+    margin: 0%;
+
+}
+
 
 .App {
-    background-color:#000000 ;
-      margin: 0%;
       padding: 0%;
       display:grid;
       grid-template-rows:35px 1fr;
-      row-gap: 30px;
-      padding: 10px;
-      height: 100dvh;
+      row-gap: 5%;
+      padding: 1%;
+      
     }
   .navbar-list {
     list-style: none; /* Remove default list styling */
@@ -68,27 +73,27 @@
   .main-container{
     display: grid;
    grid-template-columns: 1fr 1fr 1fr  ;
-   column-gap: 10px;
+   column-gap: 7%;
    height: 100%;
   }
   .sub-conatiner1{
     display: grid;
     grid-template-rows: 35% 1fr;
-    row-gap: 10px;
-    height: 100%;
+    row-gap: 5%;
+    height: 107%;
     
   }
   
   .sub-conatiner2{
     display: grid;
       grid-template-rows: 1fr 40%;
-        row-gap: 10px;
-        height: 100%;
+        row-gap: 5%;
+        height: 107%;
   } 
   .sub-container4{
     
-  padding : 10px;
-  border-radius: 42px;
+  padding : 1%;
+  border-radius: 50px;
   background: #EFD342;
   
   
@@ -104,9 +109,9 @@
   flex-shrink: 0;
   border-radius: 52px;
   background: #000;
-  gap: 1px;
-  margin-left: 20px;
-  margin-top: 13px;
+  gap: 0.5%;
+  margin-left: 5%;
+  margin-top: 3%;
   
   }
   .task-section12 {
@@ -114,19 +119,19 @@
     flex-direction: row;
     justify-content:space-evenly;
     align-items:center ;
-    width: 328px;
-  height: 29.401px;
+    width: 78%;
+  height: 1%;
   flex-shrink: 0;
-  border-radius: 52px;
+  border-radius: 50px;
   background:#EFD342;
-  gap: 1px;
-  margin-left: 20px;
-  margin-top: 13px;
+ 
+  margin-left: 5%;
+  margin-top: 1%;
   border:solid black;
   
   }
   .completed-column{
-  padding: 30px;
+  padding: 7%;
   
   border-radius: 50px;
   background: #639F59;
@@ -136,8 +141,8 @@
   .new-task{
     border: #000000;
     background-color: #efd342;
-    height: 22px;
-    width: 100px;
+    height: 75%;
+    width: 30%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -149,7 +154,7 @@
     display: flex;
     flex-direction: row;
     width: 90%;
-    padding: 10px;
+    padding: 0.50%;
     position: relative;
     border-bottom: 3px solid black;
   }
@@ -159,22 +164,22 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-size: 64px;
+  font-size: 400%;
   font-style: normal;
   font-weight: 450;
   line-height: normal;
-  margin-top: 20px;
-  gap:40px
+  margin-top: 5%;
+  gap:7%;
   }
   .plus{
     color: #fff;
-    font-size: 34px;
-  font-weight:bolder;
+    font-size: 70%;
+  
   font-family: inter;
   }
   .addtask{
-    width: 48px;
-  height: 48.663px;
+    width: 11.5%;
+  height: 11.5%;
   flex-shrink: 0;
   background-color: #000;
   border-radius: 50%;
@@ -186,11 +191,11 @@
     display:flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 20px;
+    padding: 5%;
     
   }
   .pending-column{
-  padding: 30px;
+  padding: 7%;
   flex-shrink: 0;
   border-radius: 50px;
   border: 1px solid #000;
@@ -199,7 +204,7 @@
   }
   
   .time-column{
-   padding: 30px;
+   padding:7% ; /*30*/
   flex-shrink: 0;
   border-radius: 50px;
   background: linear-gradient(180deg, rgba(217, 217, 217, 0.77) 0%, rgba(115, 115, 115, 0.77) 100%);
@@ -214,11 +219,11 @@
     align-items: flex-start;
     grid-template-columns: repeat(2, 1fr);
     gap: 0px;
-    padding:1px;
+    padding:0.25%;
     
   }
   .sub-container3{
-    height: 100%;
+    height: 107%;
     display: grid;
     grid-column: 1fr;
   }
@@ -227,7 +232,7 @@
   border-radius: 50px;
   border: 1px solid #FFF;
   background: rgba(255, 248, 248, 0.23);
-  padding:30px;
+  padding: 6%; /*30*/
   color: white;
   }
   .calendar {
@@ -235,35 +240,35 @@
   }
   .year-month {
     font-size: 1.2rem;
-    margin-bottom: 10px;
+    margin-bottom: 5%;  /*10*/
   }
   .dates {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 1px;
+    gap: 0.65%;
   }
   
   .date {
     border: 1px solid #ccc;
-    padding: 5px;
+    padding: 10%;
     text-align: center;
     border-radius: 5px;
     height:40px;
   }
   
   .events-today {
-    margin-top: 20px;
+    margin-top: 6%;
   }
   .events-line{
     display: flex;
     flex-direction: row;
     width: 90%;
-    padding: 10px;
+    padding: 3%;
     border-bottom: 3px solid white;
     
   }
   .input{
-    padding: 10px;
+    padding: 3%;
     border:none;
     background-color: transparent;
     outline: 0;
@@ -271,13 +276,8 @@
     font-weight: bolder;
     width: 100%;
   }
-  .more{
-    color: white;
-    margin-top: 30px;
-    position:  fixed ;
-    bottom: 30px;
-  }
+  
   .task-options{
     position:absolute;
-    right: 10px;
+    right: 5%;
   }
