--- a/src/components/login.css
+++ b/src/components/login.css
@@ -211,6 +211,8 @@ body{
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   height: fit-content;
+  color: black;
+  text-decoration: none;
   
   }
   .time-table {
